src/test/ui/parser/raw/raw-literal-too-many.stderr
error: too many `#` when terminating raw string
  --> $DIR/raw-literal-too-many.rs:2:15
   |
LL |     let foo = r##"bar"####;
   |               ^--^^^^^----
   |                |      |
   |                |      ...but is closed with 4.
   |                this raw string has 2 leading `#`...
   = help: remove the unneeded `#`

error: aborting due to previous error

