src/test/ui/parser/raw/raw-literal-too-many.rs
fn main() {
    let foo = r##"bar"####; //~ERROR too many `#` when terminating raw string
}
